# kalpanad

./: .gitignore  README.md  exec.sh  kalpana.service  pyproject.toml
ADRF6520GainCurve/: VGN1@VGN20.csv  VGN2@VGN1_1.5.csv  combine.py  gain_lookup.csv
curiectl/: __init__.py  adrf6520.py  ctrl_panel.py  curie.py  curiectld.py  lmx2820.py  ltc5594.py
grpc/: curie.proto
kalpanactl/: __init__.py  channel_gain.py  ctrl_panel.py  kalpana.py  kalpanactld.py  lmx2820.py  ltc2668.py  ltc5594.py
scripts/: 99-gpiodev.rules  99-spidev.rules  rc.local
wheels/: contourpy-1.3.3-cp312-cp312-linux_armv7l.whl  kiwisolver-1.4.8-cp312-cp312-linux_armv7l.whl  markupsafe-3.0.2-cp312-cp312-linux_armv7l.whl  pillow-11.3.0-cp312-cp312-linux_armv7l.whl  pyyaml-6.0.2-cp312-cp312-linux_armv7l.whl  tornado-6.5.1-cp39-abi3-linux_armv7l.whl
