[tool.poetry]
name = "kalpana"
version = "0.1.0"
description = ""
authors = ["Michael Zappe <zapman@pi-rad.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

contourpy = { file = "wheels/contourpy-1.3.3-cp312-cp312-linux_armv7l.whl" }
kiwisolver = { file = "wheels/kiwisolver-1.4.8-cp312-cp312-linux_armv7l.whl" }
markupsafe = { file = "wheels/markupsafe-3.0.2-cp312-cp312-linux_armv7l.whl" }
matplotlib = { file = "wheels/matplotlib-3.10.5-cp312-cp312-linux_armv7l.whl" }
pillow = { file = "wheels/pillow-11.3.0-cp312-cp312-linux_armv7l.whl" }
pyyaml = { file = "wheels/pyyaml-6.0.2-cp312-cp312-linux_armv7l.whl" }
tornado = { file = "wheels/tornado-6.5.1-cp39-abi3-linux_armv7l.whl" }

numpy = { file = "wheels/numpy-2.3.2-cp312-cp312-linux_armv7l.whl" }
pandas = { file = "wheels/pandas-2.3.1-cp312-cp312-linux_armv7l.whl" }
scipy = { file = "wheels/scipy-1.16.1-cp312-cp312-linux_armv7l.whl" }

flask = "^3.1.1"
click = "^8.2.1"
rpyc = "^6.0.2"
python-periphery = "^2.4.1"
marshmallow = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
